<resources>
    <string name="app_name">AndroidTaller1</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="opsexo">
        <item>M</item>
        <item>F</item>
        <item>Otros</item>
    </string-array>
    <string-array name="opcoperacion">
        <item>Cuadrante</item>
        <item>Pendiente</item>
        <item>Distancia</item>
    </string-array>
    <string-array name="resistencias">
        <item> </item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="FISICA">Física</string>
    <string name="TEXTO">Texto</string>
    <string name="GEOMETRIA">Geometría</string>
    <string name="TEXTO_DE_ENTRADA">Texto de entrada</string>
    <string name="NEGRITA">Negrita</string>
    <string name="ITALICA">Itálica</string>
    <string name="SUBRAYADA">Subrayada</string>
    <string name="VOLTAJE">Voltaje</string>
    <string name="AMPERAJE">Amperaje</string>
    <string name="RESISTENCIAS">Resistencias</string>
    <string name="RESISTENCIA1">Resistencia 1</string>
    <string name="RESISTENCIA2">Resistencia 2</string>
    <string name="RESISTENCIA3">Resistencia 3</string>
    <string name="PARALELAS">Paralelas</string>
    <string name="CALCULAR">Calcular</string>
    <string name="Resultado" />
    <string name="RESULT">Resultado:</string>
    <string name="CAMBIAR">Cambiar</string>
    <string name="CONFIRMAR_NUEVA_CONTRASEÑA">Confirmar nueva contraseña</string>
    <string name="NUEVA_CONTRASEÑA">Nueva contraseña</string>

</resources>