<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="inherit"
    tools:context=".TextoActivity">

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txvtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TEXTO"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbxnegrita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/NEGRITA" />

            <CheckBox
                android:id="@+id/cbxitalica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ITALICA" />

            <CheckBox
                android:id="@+id/cbxsubrayada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SUBRAYADA" />
        </LinearLayout>

        <EditText
            android:id="@+id/edttexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/TEXTO_DE_ENTRADA"
            android:inputType="textMultiLine|text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>