<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnfisica"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/FISICA" />

            <Button
                android:id="@+id/btntexto"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/TEXTO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btngeometria"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:text="@string/GEOMETRIA" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:gravity="bottom">

            <ImageButton
                android:id="@+id/imbayuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="?android:attr/alertDialogIcon" />

            <ImageButton
                android:id="@+id/imbhome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_home_black_24dp" />

            <ImageButton
                android:id="@+id/imbsalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="?attr/homeAsUpIndicator" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>